--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@ html {
   background-color : yellow;
 }
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
 span {
   width : 1000px;
 }
